demo3-deployment-result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "5"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"demo3"},"name":"demo3-deply","namespace":"default"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"demo3"}},"template":{"metadata":{"labels":{"app":"demo3"}},"spec":{"containers":[{"image":"allfordev/demo3v2","name":"demo3","ports":[{"containerPort":8080}]}]}}}}
  creationTimestamp: "2024-05-14T09:53:15Z"
  generation: 5
  labels:
    app: demo3
  name: demo3-deply
  namespace: default
  resourceVersion: "6933"
  uid: 728480f1-790c-455a-b310-2d609cebbb4b
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: demo3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: demo3
    spec:
      containers:
      - image: allfordev/demo3v2
        imagePullPolicy: Always
        name: demo3
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2024-05-14T09:53:19Z"
    lastUpdateTime: "2024-05-14T09:53:19Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2024-05-14T11:02:08Z"
    lastUpdateTime: "2024-05-14T11:02:08Z"
    message: ReplicaSet "demo3-deply-54fffccd6d" has timed out progressing.
    reason: ProgressDeadlineExceeded
    status: "False"
    type: Progressing
  observedGeneration: 5
  readyReplicas: 2
  replicas: 3
  unavailableReplicas: 1
  updatedReplicas: 1
