demo3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo3-service
spec:
  selector:
    app: demo3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo3
spec:
  selector:
    app: demo3
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 32001
